Thoth History
================================================================================

Version 0.3.0 (?)
  * Requires Ramaze 2008.12.
  * Requires Sequel 2.8.x.
  * Blog posts can now be saved as drafts, so you can save posts in progress
    without publishing them.
  * Twitter plugin now excludes replies by default.
  * Added theme.css and theme.js config arrays, which allow you to specify CSS
    and JS URLs that should be loaded in addition to the default Thoth CSS and
    JS. This way you don't have to override the CSS and JS templates to
    customize your theme.
  * Comment HTML sanitization was separated out into a new gem, Sanitize.

Version 0.2.1 (2008-09-09)
  * Requires Sequel 2.5.x (this fixes an issue with SQLite and DateTime
    objects).
  * Requires RedCloth 4.0.x. Markdown syntax is no longer supported as a result.
  * Names of existing tags are now suggested as you type in the "Tags" field
    when creating or editing a blog post.
  * Blog post URL names can now be specified just like pages, and names are
    automatically validated and checked for uniqueness via Ajax. If you don't
    manually enter a name, one will be created automatically based on the title.
  * Comments are now deleted via Ajax when JavaScript is enabled, making it
    easier to delete multiple comments without having to reload the page.
  * A rel="nofollow" attribute is now automatically added to links in user
    comments.
  * When minification is enabled, filenames in the public /css and /js
    directories that have names ending in "-min.css" or "-min.js" will be
    served as is since they are presumably already minified.
  * Fixed a bug that prevented client-side caching of CSS and JS when
    server-side caching and minification were enabled.
  * Fixed internal server error when viewing a tag that isn't attached to any
    posts.

Version 0.2.0 (2008-06-15)
  * Requires Ramaze 2008.06.
  * Requires Sequel 2.0.1.