@@ -1,7 +1,6 @@
 <div id="comment-<%= @comment.id %>" class="comment">
   <div class="hd">
     <h4>
-      <span class="icon comment"></span>
       <a href="<%== @comment.url %>" rel="bookmark"
           title="Permalink for this comment"><%== @comment.title %></a>
     </h4>
@@ -25,11 +24,11 @@
   </div>
 
   <div class="ft">
-    <span class="date robots-nocontent">
-      <%= @comment.created_at(Thoth::Config.timestamp.long) %>
-    </span>
-    <span class="author">
-      Posted by
+    <% if Thoth::Config.theme.gravatar.enabled && @comment.gravatar_url %>
+      <a class="gravatar" href="http://www.gravatar.com/" rel="nofollow"><img
+          src="<%== @comment.gravatar_url %>" alt="Gravatar icon" /></a>
+    <% end %>
+    <div class="author">
       <% if @comment.author_url.empty? %>
         <%== @comment.author %>
       <% else %>
@@ -37,6 +36,9 @@
           <%== @comment.author %>
         </a>
       <% end %>
-    </span>
+    </div>
+    <div class="date robots-nocontent">
+      <%= @comment.created_at(Thoth::Config.timestamp.long) %>
+    </div>
   </div>
 </div>
