@@ -6,11 +6,14 @@ Version 0.3.0 (?)
   * Requires Sequel 2.8.x.
   * Blog posts can now be saved as drafts, so you can save posts in progress
     without publishing them.
+  * Added Gravatar support, enabled by default. Set theme.gravatar.enabled to
+    false if you don't want it.
   * Twitter plugin now excludes replies by default.
   * Added theme.css and theme.js config arrays, which allow you to specify CSS
     and JS URLs that should be loaded in addition to the default Thoth CSS and
     JS. This way you don't have to override the CSS and JS templates to
     customize your theme.
+  * The "New comment" form now requires an email address.
   * Comment HTML sanitization was separated out into a new gem, Sanitize.
 
 Version 0.2.1 (2008-09-09)
